💄 Did a lot of style: Now the scroll bar is not shown in the messages_area but is still scrollable. The scroll bar directly go to the bottom after each input (Cannot make it just after a join though) The messages are now at each side of the screen (author-left | others-right) The invitation message has been restyled. Too long message don't overflow and are break correctly.

--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -1293,12 +1293,17 @@ and should display them in columns of three cards max */
 
 .messages_area {
   overflow-y: auto;
+	overflow-x: hidden;
 
   position: absolute;
   width: 100%;
   height: 80%;
   left: 0px;
   top: 5%;
+}
+
+.messages_area::-webkit-scrollbar {
+  width: 0 !important;
 }
 
 .message,
@@ -1337,21 +1342,36 @@ and should display them in columns of three cards max */
   flex-grow: 0;
   margin: 1rem;
   /* margin: 0px 10px; */
+	word-break: break-word;
 }
 
 .message_author {
-  right: 10%;
-  background: #fca311;
+	box-sizing: border-box;
+	float: left;
+	width: auto;
+	max-width: 80%;
+	position: relative;
+	clear: both;
+	
+	background: #fca311;
 }
 
 .message_system {
-	left: 10%;
-	background: #25BF75;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	row-gap: 10px;
 }
 
 .message_friend {
-  left: 10%;
-  background: #1985a1;
+	box-sizing: border-box;
+	float: right;
+	width: auto;
+	max-width: 80%;
+	position: relative;
+	clear: both;
+ 
+	background: #1985a1;
 }
 
 .chat_add_channel {
